--- a/source/style/main.css
+++ b/source/style/main.css
@@ -1096,6 +1096,7 @@ body {
   padding-top: 1.25em;
   padding-left: 1.25em;
   background-color: #ebebeb;
+  overflow: hidden;
 }
 
 @media (max-width: 576px) {
@@ -1148,13 +1149,9 @@ body {
   font-size: 12px;
   font-weight: 700;
   color: #bfbfbf;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
-  min-height: 250px;
   overflow-x: auto;
 }
 
@@ -1167,7 +1164,8 @@ body {
 }
 
 .monthly-revelue__interval {
-  width: 90%;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1228,63 +1226,8 @@ body {
   color: #ffffff;
 }
 
-.monthly-revelue__diagram {
-  width: 80%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-
-.monthly-revelue__diagram__list {
-  padding: 0;
-  margin-right: 1.7em;
-  width: 5%;
-}
-
-.monthly-revelue__diagram__item {
-  list-style: none;
-  margin-bottom: 1.5em;
-}
-
-.monthly-revelue__diagram__img {
-  -webkit-box-flex: 1;
-      -ms-flex: auto;
-          flex: auto;
-}
-
-.monthly-revelue-month__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  list-style: none;
-}
-
-.monthly-revelue-month__item {
-  padding: 0 1.1em;
+.monthly-revelue__img {
+  max-width: 100%;
 }
 
 .customers-feed {
@@ -1306,7 +1249,6 @@ body {
   -webkit-box-flex: 1;
       -ms-flex: auto;
           flex: auto;
-  max-width: 500px;
   overflow-y: auto;
 }
 
@@ -1400,13 +1342,14 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  width: 80%;
 }
 
 .customers-feed__user-name {
   font-size: 14px;
   font-weight: 900;
   color: #777777;
-  max-width: 345px;
+  max-width: 95%;
   padding: 1em;
   margin-bottom: 1em;
   border: 2px solid #f1f1f1;
@@ -1415,13 +1358,7 @@ body {
 }
 
 .customers-feed__user-name:nth-child(n + 2):nth-child(-n + 3) {
-  max-width: 316px;
-}
-
-@media (max-width: 768px) {
-  .customers-feed__user-name:nth-child(n + 2):nth-child(-n + 3) {
-    width: 85%;
-  }
+  max-width: 85%;
 }
 
 .customers-feed__user-feed {
@@ -1439,7 +1376,7 @@ body {
   font-weight: 700;
   color: #bfbfbf;
   white-space: nowrap;
-  overflow-x: auto;
+  overflow: auto;
 }
 
 @media (min-width: 1280px) {
@@ -1619,6 +1556,7 @@ input[type=checkbox]:checked + .pseudocheckbox::before {
 }
 
 .revenue-hour {
+  min-height: 270px;
   width: 264px;
 }
 
@@ -1707,7 +1645,17 @@ input[type=checkbox]:checked + .pseudocheckbox::before {
   margin: 0;
 }
 
+@media (max-width: 576px) {
+  .wrap-main {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 .wrap-inner {
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1723,8 +1671,8 @@ input[type=checkbox]:checked + .pseudocheckbox::before {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  margin: 0;
   max-width: 100%;
+  margin: 0;
 }
 
 .aside {
@@ -2085,5 +2033,27 @@ input[type=checkbox]:checked + .pseudocheckbox::before {
           flex-direction: row;
   height: 100%;
   width: 100%;
+}
+
+@media screen and (min-device-width: 1280px) {
+  .wrap-main {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+  .customers-feed {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+  .progress-statistic,
+  .shipments {
+    width: 35%;
+  }
+}
+
+@media screen and (min-device-width: 1360px) {
+  .customers-feed {
+    padding: 2em;
+  }
 }
 /*# sourceMappingURL=main.css.map */
